add minor changes- add answer comments in question1

--- a/Day 1 Training/1. Introduction/index.html
+++ b/Day 1 Training/1. Introduction/index.html
@@ -9,7 +9,7 @@
 
 <!-- Q1) a. Writing javascript between script tags -->
 
-<html>
+<!-- <html>
   <head>
     <title>Javascript Training</title>
   </head>
@@ -19,7 +19,7 @@
       document.getElementById("test").innerHTML = "Goodbye World!";
     </script>
   </body>
-</html>
+</html> -->
 
 <!-- ================================================================================ -->
 
@@ -52,47 +52,58 @@ Given the above html, find out what happens when you try to access the element h
 <!-- Q2) a. using script tag in head tag -->
 
 <!-- <html>
-    <head>
-        <title>Javascript Training</title>
-        <script>
-            document.getElementById("test").innerHTML = "Goodbye World!"
-        </script>
-    </head>
-    <body>
-        <h1 id="test">Hello World!</h1>
-    </body>
+  <head>
+    <title>Javascript Training</title>
+    <script>
+      document.getElementById("test").innerHTML = "Goodbye World!";
+    </script>
+  </head>
+  <body>
+    <h1 id="test">Hello World!</h1>
+  </body>
 </html> -->
+
+<!-- Here, we can add a script tag in the `head` of HTML, but it doesn't work because HTML uses a top-down approach.
+     So, HTML will read the head tag first and the script tag inside, here as we haven't red the body yet, it won't be able to find element in script  
+     Hence, won't change the inner html of element.
+-->
 
 <!-- ============================================================================= -->
 
 <!-- Q2) b. using script tag at the start of the body tag -->
 
 <!-- <html>
-    <head>
-        <title>Javascript Training</title>
-    </head>
-    <body>
-        <script>
-            document.getElementById("test").innerHTML = "Goodbye World!"
-        </script>
-        <h1 id="test">Hello World!</h1>
-    </body>
+  <head>
+    <title>Javascript Training</title>
+  </head>
+  <body>
+    <script>
+      document.getElementById("test").innerHTML = "Goodbye World!";
+    </script>
+    <h1 id="test">Hello World!</h1>
+  </body>
 </html> -->
 
+<!-- 
+  Here, the script tag doesn't work, the reason is same as of putting it in the head tag
+-->
 <!-- =========================================================================== -->
 
 <!-- Q2) c. using script tag at the end of the body tag -->
 
-<!-- <html>
-    <head>
-        <title>Javascript Training</title>
-    </head>
-    <body>
-        <h1 id="test">Hello World!</h1>
-        <script>
-            document.getElementById("test").innerHTML = "Goobye World!"
-        </script>
-    </body>
+<html>
+  <head>
+    <title>Javascript Training</title>
+  </head>
+  <body>
+    <h1 id="test">Hello World!</h1>
+    <script>
+      document.getElementById("test").innerHTML = "Goobye World!";
+    </script>
+  </body>
 </html>
 
+<!-- 
+ This works totally fine, as the whole body will be scanned by HTML and then the script tag will run which will access the html element 
+ and change the inner html.
 -->
